[package]
name = "assignment3-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
tests_lib = {path = "../tests_lib"}
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.11", features = ["blocking"] }
nix = { version = "0.29", features = ["fs"] }
async-trait = "0.1.86"
futures = "0.3.31"
chrono = "0.4.39"